Fix T92256: rotate Instances node does not take scaling into account correctly

Differential Revision: https://developer.blender.org/D13031